--- a/public/static/home/css/subject.css
+++ b/public/static/home/css/subject.css
@@ -54,3 +54,26 @@
 		margin-top: 0px;
 	}
 }
+
+/*云标签*/
+.cloud-tag .develop_c{
+	/*padding:15px;*/
+
+}
+.cloud-tag .develop_c > a{
+	display: inline-block;
+	font-size: 12px;
+	height: 22px;
+	line-height: 22px;
+	text-align: center;
+	padding: 0 12px;
+	color: #999;
+	border: 1px solid #999;
+	-webkit-border-radius: 22px;
+	-moz-border-radius: 22px;
+	-ms-border-radius: 22px;
+	border-radius: 22px;
+	margin: 0 10px 15px 0;
+	float: left;
+
+}
