--- a/public/static/home/css/index.css
+++ b/public/static/home/css/index.css
@@ -45,3 +45,23 @@
 	margin:0 2px;
 	background-color: #FF5722;
 }
+
+
+
+/*快速通道*/
+.channels{
+
+}
+
+.channels a{
+	display: block;
+	border:1px solid grey;
+	border-radius: 5px;
+	width: 100%;
+	height: 52px;
+	line-height: 52px;
+	text-indent: 15px;
+	text-decoration: none;
+	font-size: 18px;
+	font-family: "Microsoft YaHei UI";
+}
