--- a/public/static/home/css/signup.css
+++ b/public/static/home/css/signup.css
@@ -3,9 +3,9 @@ body{
 }
 .wrap{
 	width: 100%;
-	height: 575px;
+	/*height: 575px;*/
 	background-color: white;
-	margin-top: 65px;
+	margin-top: 45px;
 	box-shadow: 0 0 8px rgba(0,0,0,.1);
 	border-radius: 5px;
 }
