--- a/public/static/home/css/subject.css
+++ b/public/static/home/css/subject.css
@@ -2,6 +2,11 @@
 	margin-bottom:25px;
 	padding:10px 0;
 }
+.content .subject-info img.img-radius-full{
+	width:85px;
+	height: 85px;
+}
+
 .content .subject-info .test{
 	height: 100%;
 
